<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_android_black_24dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/keywordRadioGroup" />

    <RadioGroup
        android:id="@+id/keywordRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/catRadioButton"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:layout_marginTop="6dp">

        <RadioButton
            android:id="@+id/catRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat" />

        <RadioButton
            android:id="@+id/spaceRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/space" />

        <RadioButton
            android:id="@+id/waterRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water" />

        <RadioButton
            android:id="@+id/animalsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animals" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_random_image"
        app:layout_constraintStart_toStartOf="@id/keywordRadioGroup"
        app:layout_constraintEnd_toEndOf="@id/keywordRadioGroup"
        app:layout_constraintTop_toBottomOf="@id/keywordRadioGroup"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintBottom_toBottomOf="@id/imageView" />





</androidx.constraintlayout.widget.ConstraintLayout>